# agents

./: .env.example  .gitignore  AGENTS.md  BUILD_YOUR_OWN_PLUGIN.md  CLAUDE.md  NOTICE.txt  README.md  SKILLS.md  a.sh  a2a_function_tool.py  gemini_text.py  job.py  llm-changes-realtedlogs.md  pyproject.toml  requirements.txt  setup.sh  test_cascading.py  test_connection.py  test_connection_text.py  test_connection_v2.py  worker.py
videosdk-agents/: README.md  SKILLS.md  pyproject.toml
videosdk-agents/videosdk/agents/: __init__.py  _plugins.py  _preload_inference.py  agent.py  agent_session.py  audio_cache.py  background_audio.py  base_instructions.py  cascading_pipeline.py  cli.py  console_mode.py  content_generation.py  conversation_flow.py  dtmf_handler.py  eou.py  event_bus.py  event_emitter.py  fallback_base.py  graph_adapter.py  helper.py  images.py  inference_executor.py  init_config.py  job.py  mcp_integration.py  mcp_server.py  performance_matrix.py  pipeline.py  pipeline_hooks.py  pipeline_orchestrator.py  pipeline_utils.py  playground_manager.py  prewarm_registry.py  realtime_base_model.py  realtime_llm_adapter.py  realtime_pipeline.py  resampling.py  speech_generation.py  speech_understanding.py  utils.py  (+5 more)
videosdk-agents/videosdk/agents/a2a/: card.py  protocol.py
videosdk-agents/videosdk/agents/avatar/: __init__.py  avatar_audio_io.py  avatar_auth.py  avatar_controller.py  avatar_data_channel.py  avatar_schema.py  avatar_sync.py  avatar_synchronizer.py
videosdk-agents/videosdk/agents/backend/: connection.py  protocol.py
videosdk-agents/videosdk/agents/connection/: base.py  webrtc_handler.py  websocket_handler.py
videosdk-agents/videosdk/agents/debug/: __init__.py  http_server.py  tracing.py
videosdk-agents/videosdk/agents/execution/: _mp_context.py  base_resource.py  inference_resource.py  mem_stats.py  resource_manager.py  resources.py  task_executor.py  types.py
videosdk-agents/videosdk/agents/inference/: __init__.py  denoise.py  llm.py  realtime.py  stt.py  tts.py  turn.py
videosdk-agents/videosdk/agents/inference/_grpc/: __init__.py  turn_detection.proto  turn_detection_pb2.py  turn_detection_pb2_grpc.py
videosdk-agents/videosdk/agents/ipc/: __init__.py  inference_executor.py  inference_proc_executor.py  inference_proc_lazy_main.py  job_executor.py  job_proc_executor.py  job_proc_lazy_main.py  job_thread_executor.py  proc_pool.py  process_manager.py  types.py
videosdk-agents/videosdk/agents/knowledge_base/: __init__.py  base.py  config.py
videosdk-agents/videosdk/agents/llm/: __init__.py  chat_context.py  context_compressor.py  context_window.py  fallback_llm.py  format_converters.py  llm.py
videosdk-agents/videosdk/agents/llm/context/: __init__.py  context.py  items.py  readonly.py  window.py
videosdk-agents/videosdk/agents/mcp/: mcp_manager.py  mcp_server.py
videosdk-agents/videosdk/agents/metrics/: __init__.py  analytics.py  cascading_metrics_collector.py  collector.py  component_manager.py  event_bridge.py  integration.py  log_analytics.py  log_handler.py  logger_handler.py  logs.py  metrics_collector.py  metrics_schema.py  metrics_transformer.py  models.py  realtime_collector.py  realtime_metrics_collector.py  telemetry.py  traces_flow.py  turn_lifecycle_tracker.py  unified_metrics_collector.py
videosdk-agents/videosdk/agents/room/: _input_stream.py  _recording_manager.py  _sip_manager.py  _transport_event_sender.py  audio_stream.py  meeting_event_handler.py  output_stream.py  participant_event_handler.py  room.py
videosdk-agents/videosdk/agents/stt/: __init__.py  fallback_stt.py  stt.py
videosdk-agents/videosdk/agents/telemetry/: __init__.py  videosdk_telemetry.py
videosdk-agents/videosdk/agents/tokenize/: __init__.py  base.py  basic.py  filters.py  hyphenate.py  indic.py  patterns.py  stream.py  verbalize.py
videosdk-agents/videosdk/agents/transports/: base.py  webrtc_handler.py  websocket_handler.py
videosdk-agents/videosdk/agents/tts/: __init__.py  fallback_tts.py  tts.py
videosdk-agents/videosdk/agents/videosdk_eval/: __init__.py  agent_wrapper.py  audio_track.py  cascading_flow.py  eval_logger.py  evaluation.py  factory.py  metrics.py  turn.py
videosdk-agents/videosdk/agents/videosdk_eval/components/: __init__.py  judge.py  llm.py  stt.py  tts.py
videosdk-agents/videosdk/agents/videosdk_eval/providers/: __init__.py  judge.py  llm.py  stt.py  tts.py
videosdk-agents/videosdk/agents/warm_transfer/: __init__.py  _runner.py
videosdk-agents/videosdk/inference/: __init__.py  llm.py  realtime.py  stt.py  tts.py
videosdk-plugins/videosdk-plugins-aws/: README.md  SKILLS.md  pyproject.toml
videosdk-plugins/videosdk-plugins-aws/videosdk/plugins/aws/: __init__.py  aws_nova_sonic_api.py  llm.py  tts.py
videosdk-plugins/videosdk-plugins-cambai/: README.md  SKILLS.md  pyproject.toml
videosdk-plugins/videosdk-plugins-cambai/videosdk/plugins/cambai/: __init__.py  tts.py  version.py
videosdk-plugins/videosdk-plugins-end_of_utterance/: README.md  pyproject.toml
videosdk-plugins/videosdk-plugins-gladia/: README.md  SKILLS.md  pyproject.toml
videosdk-plugins/videosdk-plugins-humeai/: README.md  SKILLS.md  pyproject.toml
videosdk-plugins/videosdk-plugins-indic-nlp/: README.md  pyproject.toml
videosdk-plugins/videosdk-plugins-langchain/: README.md  SKILLS.md  pyproject.toml
videosdk-plugins/videosdk-plugins-litellm/: README.md  pyproject.toml
videosdk-plugins/videosdk-plugins-litellm/tests/: test_litellm_plugin.py
videosdk-plugins/videosdk-plugins-lmnt/: README.md  SKILLS.md  pyproject.toml
videosdk-plugins/videosdk-plugins-nova-sonic/: README.md  pyproject.toml
videosdk-plugins/videosdk-plugins-rime/: README.md  SKILLS.md  pyproject.toml
videosdk-plugins/videosdk-plugins-rime/videosdk_plugins_rime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
videosdk-plugins/videosdk-plugins-sip/: README.md  pyproject.toml
videosdk-plugins/videosdk-plugins-ultravox/: README.md  SKILLS.md  pyproject.toml
videosdk-plugins/videosdk-plugins-xai/: README.md  SKILLS.md  pyproject.toml
(+386 files in other folders)
