[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-agents"
dynamic = ["version"]
description = "Video SDK Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "agents", "videosdk", "webrtc", "realtime"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "uvicorn",
    "videosdk>=0.3.2",
    "numpy",
    "httpx",
    "aiohttp",
    "openai",
    "python-dotenv",
    "pyee>=13.0.0",
    "grpcio",
    "protobuf",
    "docstring_parser",
    "google-genai",
    "pydantic>=2.0,<3",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "click>=8.0.0",
    "scipy>=1.11.0",
    "mcp",
    "PyYAML",
    "urllib3",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "requests",
    "protobuf>=5.29,<6.0",
    "aec-audio-processing>=1.0.1",
    "sounddevice",
    "PyJWT",
    "indic-nlp-library>=0.92",
]

[project.optional-dependencies]
anam = ["videosdk-plugins-anam>=1.0.14"]
anthropic = ["videosdk-plugins-anthropic>=1.0.14"]
assemblyai = ["videosdk-plugins-assemblyai>=1.0.14"]
aws = ["videosdk-plugins-aws>=1.0.14"]
azure = ["videosdk-plugins-azure>=1.0.14"]
cartesia = ["videosdk-plugins-cartesia>=1.0.14"]
cambai = ["videosdk-plugins-cambai>=1.0.14"]
cerebras = ["videosdk-plugins-cerebras>=1.0.14"]
cometapi = ["videosdk-plugins-cometapi>=1.0.14"]
deepgram = ["videosdk-plugins-deepgram>=1.0.14"]
elevenlabs = ["videosdk-plugins-elevenlabs>=1.0.14"]
google = ["videosdk-plugins-google>=1.0.14"]
groq = ["videosdk-plugins-groq>=1.0.14"]
gladia = ["videosdk-plugins-gladia>=1.0.14"]
humeai = ["videosdk-plugins-humeai>=1.0.14"]
inworldai = ["videosdk-plugins-inworldai>=1.0.14"]
lmnt = ["videosdk-plugins-lmnt>=1.0.14"]
langchain = ["videosdk-plugins-langchain>=1.0.14"]
murfai = ["videosdk-plugins-murfai>=1.0.14"]
navana = ["videosdk-plugins-navana>=1.0.14"]
neuphonic = ["videosdk-plugins-neuphonic>=1.0.14"]
nvidia = ["videosdk-plugins-nvidia>=1.0.14"]
openai = ["videosdk-plugins-openai>=1.0.14"]
papla = ["videosdk-plugins-papla>=1.0.14"]
resemble = ["videosdk-plugins-resemble>=1.0.14"]
rime = ["videosdk-plugins-rime>=1.0.14"]
rnnoise = ["videosdk-plugins-rnnoise>=1.0.14"]
sarvamai = ["videosdk-plugins-sarvamai>=1.0.14"]
silero = ["videosdk-plugins-silero>=1.0.14"]
simli = ["videosdk-plugins-simli>=1.0.14"]
smallestai = ["videosdk-plugins-smallestai>=1.0.14"]
speechify = ["videosdk-plugins-speechify>=1.0.14"]
turn-detector = ["videosdk-plugins-turn-detector>=1.0.14"]
ultravox = ["videosdk-plugins-ultravox>=1.0.14"]
xai = ["videosdk-plugins-xai>=1.0.14"]
videosdk-conversational-graph = ["videosdk-conversational-graph>=1.0.0"]

[tool.hatch.version]
path = "videosdk/agents/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]
include = ["videosdk/agents/resources/*"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]

[tool.hatch.metadata]
allow-direct-references = true
