[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-agents"
dynamic = ["version"]
description = "Video SDK Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "agents", "videosdk", "webrtc", "realtime"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk>=0.3.2",
    "numpy",
    "httpx",
    "aiohttp",
    "python-dotenv",
    "grpcio",
    "protobuf>=5.29,<6.0",
    "docstring_parser",
    "google-genai",
    "pydantic>=2.0,<3",
    "requests>=2.25.0",
    "scipy>=1.11.0",
    "mcp",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "PyJWT",
    "indic-nlp-library>=0.92",
]

[project.optional-dependencies]
anam = ["videosdk-plugins-anam>=1.0.19"]
anthropic = ["videosdk-plugins-anthropic>=1.0.19"]
assemblyai = ["videosdk-plugins-assemblyai>=1.0.19"]
aws = ["videosdk-plugins-aws>=1.0.19"]
azure = ["videosdk-plugins-azure>=1.0.19"]
cartesia = ["videosdk-plugins-cartesia>=1.0.19"]
cambai = ["videosdk-plugins-cambai>=1.0.19"]
cerebras = ["videosdk-plugins-cerebras>=1.0.19"]
cometapi = ["videosdk-plugins-cometapi>=1.0.19"]
deepgram = ["videosdk-plugins-deepgram>=1.0.19"]
elevenlabs = ["videosdk-plugins-elevenlabs>=1.0.19"]
google = ["videosdk-plugins-google>=1.0.19"]
groq = ["videosdk-plugins-groq>=1.0.19"]
gladia = ["videosdk-plugins-gladia>=1.0.19"]
humeai = ["videosdk-plugins-humeai>=1.0.19"]
inworldai = ["videosdk-plugins-inworldai>=1.0.19"]
lmnt = ["videosdk-plugins-lmnt>=1.0.19"]
langchain = ["videosdk-plugins-langchain>=1.0.19"]
murfai = ["videosdk-plugins-murfai>=1.0.19"]
navana = ["videosdk-plugins-navana>=1.0.19"]
neuphonic = ["videosdk-plugins-neuphonic>=1.0.19"]
nvidia = ["videosdk-plugins-nvidia>=1.0.19"]
openai = ["videosdk-plugins-openai>=1.0.19"]
papla = ["videosdk-plugins-papla>=1.0.19"]
resemble = ["videosdk-plugins-resemble>=1.0.19"]
rime = ["videosdk-plugins-rime>=1.0.19"]
rnnoise = ["videosdk-plugins-rnnoise>=1.0.19"]
sarvamai = ["videosdk-plugins-sarvamai>=1.0.19"]
silero = ["videosdk-plugins-silero>=1.0.19"]
simli = ["videosdk-plugins-simli>=1.0.19"]
smallestai = ["videosdk-plugins-smallestai>=1.0.19"]
speechify = ["videosdk-plugins-speechify>=1.0.19"]
turn-detector = ["videosdk-plugins-turn-detector>=1.0.19"]
ultravox = ["videosdk-plugins-ultravox>=1.0.19"]
xai = ["videosdk-plugins-xai>=1.0.19"]

videosdk-conversational-graph = ["videosdk-conversational-graph>=1.0.0"]
console = ["sounddevice", "aec-audio-processing>=1.0.1"]

[tool.hatch.version]
path = "videosdk/agents/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]
include = ["videosdk/agents/resources/*"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]

[tool.hatch.metadata]
allow-direct-references = true
