[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-agents"
dynamic = ["version"]
description = "Video SDK Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "agents", "videosdk", "webrtc", "realtime"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk>=0.3.2",
    "numpy",
    "httpx",
    "aiohttp",
    "python-dotenv",
    "grpcio",
    "protobuf>=5.29,<6.0",
    "docstring_parser",
    "google-genai",
    "pydantic>=2.0,<3",
    "requests>=2.25.0",
    "scipy>=1.11.0",
    "mcp",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "PyJWT",
    "indic-nlp-library>=0.92",
]

[project.optional-dependencies]
anam = ["videosdk-plugins-anam>=1.0.22"]
anthropic = ["videosdk-plugins-anthropic>=1.0.22"]
assemblyai = ["videosdk-plugins-assemblyai>=1.0.22"]
aws = ["videosdk-plugins-aws>=1.0.22"]
azure = ["videosdk-plugins-azure>=1.0.22"]
cartesia = ["videosdk-plugins-cartesia>=1.0.22"]
cambai = ["videosdk-plugins-cambai>=1.0.22"]
cerebras = ["videosdk-plugins-cerebras>=1.0.22"]
cometapi = ["videosdk-plugins-cometapi>=1.0.22"]
deepgram = ["videosdk-plugins-deepgram>=1.0.22"]
elevenlabs = ["videosdk-plugins-elevenlabs>=1.0.22"]
google = ["videosdk-plugins-google>=1.0.22"]
groq = ["videosdk-plugins-groq>=1.0.22"]
gladia = ["videosdk-plugins-gladia>=1.0.22"]
humeai = ["videosdk-plugins-humeai>=1.0.22"]
inworldai = ["videosdk-plugins-inworldai>=1.0.22"]
lmnt = ["videosdk-plugins-lmnt>=1.0.22"]
langchain = ["videosdk-plugins-langchain>=1.0.22"]
murfai = ["videosdk-plugins-murfai>=1.0.22"]
navana = ["videosdk-plugins-navana>=1.0.22"]
neuphonic = ["videosdk-plugins-neuphonic>=1.0.22"]
nvidia = ["videosdk-plugins-nvidia>=1.0.22"]
openai = ["videosdk-plugins-openai>=1.0.22"]
papla = ["videosdk-plugins-papla>=1.0.22"]
resemble = ["videosdk-plugins-resemble>=1.0.22"]
rime = ["videosdk-plugins-rime>=1.0.22"]
rnnoise = ["videosdk-plugins-rnnoise>=1.0.22"]
sarvamai = ["videosdk-plugins-sarvamai>=1.0.22"]
silero = ["videosdk-plugins-silero>=1.0.22"]
simli = ["videosdk-plugins-simli>=1.0.22"]
smallestai = ["videosdk-plugins-smallestai>=1.0.22"]
speechify = ["videosdk-plugins-speechify>=1.0.22"]
turn-detector = ["videosdk-plugins-turn-detector>=1.0.22"]
ultravox = ["videosdk-plugins-ultravox>=1.0.22"]
xai = ["videosdk-plugins-xai>=1.0.22"]

videosdk-conversational-graph = ["videosdk-conversational-graph>=1.0.0"]
console = ["sounddevice", "aec-audio-processing>=1.0.1"]

[tool.hatch.version]
path = "videosdk/agents/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]
include = ["videosdk/agents/resources/*"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]

[tool.hatch.metadata]
allow-direct-references = true
