[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-aws"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for AWS"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "videosdk"}]
keywords = ["video", "audio", "ai", "aws", "videosdk", "nova-sonic"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk-agents>=0.0.15",
    "aws-sdk-bedrock-runtime",
    "smithy-aws-core"
]

[tool.hatch.version]
path = "videosdk/plugins/aws/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
