[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-eou"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for livekit's end of utterance model"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "videosdk"}]
keywords = ["video", "audio", "ai", "videosdk"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk-agents>=0.0.6",
    "transformers>=4.47.1",
    "numpy>=1.26",
    "onnxruntime>=1.18",
    "jinja2",
]

[tool.hatch.version]
path = "videosdk/plugins/end_of_utterance/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
