[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-gladia"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for Gladia Speech-to-Text (STT)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "stt", "speech-to-text", "gladia", "videosdk","gladia.io"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["videosdk-agents>=0.0.57", "aiohttp>=3.9.0", "numpy>=1.26.0", "scipy>=1.11.0"]

[tool.hatch.version]
path = "videosdk/plugins/gladia/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
