[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-indic-nlp"
dynamic = ["version"]
description = "VideoSDK Agent Framework sentence tokenizer backed by indic-nlp-library"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "videosdk" }]
keywords = [
    "video",
    "audio",
    "ai",
    "indic",
    "hindi",
    "tamil",
    "bengali",
    "tokenizer",
    "videosdk",
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Hindi",
    "Natural Language :: Bengali",
    "Natural Language :: Tamil",
]
dependencies = [
    "videosdk-agents>=1.0.9",
    "indic-nlp-library>=0.92",
]

[tool.hatch.version]
path = "videosdk/plugins/indic_nlp/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
