[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-langchain"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for LangChain and LangGraph"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "langchain", "langgraph", "videosdk"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk-agents>=1.0.0b1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
]

[tool.hatch.version]
path = "videosdk/plugins/langchain/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
