[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-litellm"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for routing LLM calls through LiteLLM (100+ providers)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "litellm", "videosdk"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk-agents>=1.0.12",
    "videosdk-plugins-openai>=1.0.12",
    "litellm>=1.60,<1.85",
]

[tool.hatch.version]
path = "videosdk/plugins/litellm/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
