[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-nova-sonic"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for AWS Nova Sonic"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "videosdk"}]
keywords = ["video", "audio", "ai", "aws", "videosdk", "nova-sonic"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aws-sdk-bedrock-runtime>=1.0.0",
    "smithy-aws-core>=0.0.1"
]

[tool.hatch.version]
path = "videosdk/plugins/nova_sonic/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
