[project]
name = "videosdk-plugins-rime"
version = "0.1.0"
description = "Rime AI TTS plugin for VideoSDK"
authors = [{name = "VideoSDK Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["videosdk", "rime", "tts", "text-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "videosdk-agents>=0.0.16",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/videosdk-live/videosdk-agents"
Documentation = "https://docs.videosdk.live/agents"
Repository = "https://github.com/videosdk-live/videosdk-agents"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["videosdk*"] 