[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-ultravox"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for Ultravox"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "videosdk", "ultravox"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk-agents>=0.0.57",
    "websockets",
    "aiohttp"
]

[tool.hatch.version]
path = "videosdk/plugins/ultravox/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
